Closed
Bug 1734285
Opened 4 years ago
Closed 4 years ago
Perma Bp-clang-trunk [tier 2] /builds/worker/checkouts/gecko/dom/canvas/CanvasRenderingContext2D.cpp:2502:7: error: use of bitwise '|' with boolean operands [-Werror,-Wbitwise-instead-of-logical]
Categories
(Firefox Build System :: General, defect, P5)
Firefox Build System
General
Tracking
(firefox95 fixed)
RESOLVED
FIXED
95 Branch
| Tracking | Status | |
|---|---|---|
| firefox95 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: andi)
References
(Blocks 1 open bug, )
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=353805858&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/X1SbZ2TuQGa166wytiRieg/runs/0/artifacts/public/logs/live_backing.log
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/canvas'
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o Unified_cpp_dom_canvas0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/canvas -I/builds/worker/workspace/obj-build/dom/canvas -I/builds/worker/checkouts/gecko/js/xpconnect/wrappers -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/svg -I/builds/worker/checkouts/gecko/dom/workers -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/gfx/angle/checkout/include -I/builds/worker/checkouts/gecko/gfx/cairo/cairo/src -I/builds/worker/checkouts/gecko/gfx/gl -I/builds/worker/checkouts/gecko/image -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/media/libyuv/libyuv/include -I/builds/worker/checkouts/gecko/gfx/skia -I/builds/worker/checkouts/gecko/gfx/skia/skia -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wshadow-uncaptured-local -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wenum-compare-conditional -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-error=unused-but-set-variable -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -O2 -fno-omit-frame-pointer -funwind-tables -Werror -I/builds/worker/checkouts/gecko/widget/gtk/compat-gtk3 -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -Wno-error=shadow -Werror=implicit-int-conversion -Werror=switch -fexperimental-new-pass-manager -MD -MP -MF .deps/Unified_cpp_dom_canvas0.o.pp Unified_cpp_dom_canvas0.cpp
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - In file included from Unified_cpp_dom_canvas0.cpp:38:
[task 2021-10-06T02:29:22.474Z] 02:29:22 ERROR - /builds/worker/checkouts/gecko/dom/canvas/CanvasRenderingContext2D.cpp:2502:7: error: use of bitwise '|' with boolean operands [-Werror,-Wbitwise-instead-of-logical]
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - if (!std::isfinite((float)aX) | !std::isfinite((float)aY) |
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - /builds/worker/checkouts/gecko/dom/canvas/CanvasRenderingContext2D.cpp:2502:7: note: cast one or both operands to int to silence this warning
[task 2021-10-06T02:29:22.474Z] 02:29:22 ERROR - /builds/worker/checkouts/gecko/dom/canvas/CanvasRenderingContext2D.cpp:2502:7: error: use of bitwise '|' with boolean operands [-Werror,-Wbitwise-instead-of-logical]
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - if (!std::isfinite((float)aX) | !std::isfinite((float)aY) |
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ||
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - /builds/worker/checkouts/gecko/dom/canvas/CanvasRenderingContext2D.cpp:2502:7: note: cast one or both operands to int to silence this warning
[task 2021-10-06T02:29:22.474Z] 02:29:22 ERROR - /builds/worker/checkouts/gecko/dom/canvas/CanvasRenderingContext2D.cpp:2502:7: error: use of bitwise '|' with boolean operands [-Werror,-Wbitwise-instead-of-logical]
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - if (!std::isfinite((float)aX) | !std::isfinite((float)aY) |
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ||
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - /builds/worker/checkouts/gecko/dom/canvas/CanvasRenderingContext2D.cpp:2502:7: note: cast one or both operands to int to silence this warning
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - In file included from Unified_cpp_dom_canvas0.cpp:65:
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - In file included from /builds/worker/checkouts/gecko/dom/canvas/ClientWebGLContext.cpp:13:
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - In file included from /builds/worker/checkouts/gecko/dom/canvas/HostWebGLContext.h:17:
[task 2021-10-06T02:29:22.474Z] 02:29:22 ERROR - /builds/worker/checkouts/gecko/dom/canvas/WebGLFramebuffer.h:72:12: error: use of bitwise '|' with boolean operands [-Werror,-Wbitwise-instead-of-logical]
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - return bool(mTexturePtr) | bool(mRenderbufferPtr);
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ||
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - /builds/worker/checkouts/gecko/dom/canvas/WebGLFramebuffer.h:72:12: note: cast one or both operands to int to silence this warning
[task 2021-10-06T02:29:22.474Z] 02:29:22 ERROR - /builds/worker/checkouts/gecko/dom/canvas/WebGLFramebuffer.h:105:9: error: use of bitwise '|' with boolean operands [-Werror,-Wbitwise-instead-of-logical]
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - if (!HasAttachment() | !other.HasAttachment()) return false;
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - ||
[task 2021-10-06T02:29:22.474Z] 02:29:22 INFO - /builds/worker/checkouts/gecko/dom/canvas/WebGLFramebuffer.h:105:9: note: cast one or both operands to int to silence this warning
[task 2021-10-06T02:29:22.475Z] 02:29:22 INFO - 5 errors generated.
[task 2021-10-06T02:29:22.475Z] 02:29:22 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:676: Unified_cpp_dom_canvas0.o] Error 1
[task 2021-10-06T02:29:22.475Z] 02:29:22 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/canvas'
[task 2021-10-06T02:29:22.475Z] 02:29:22 ERROR - gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: dom/canvas/target-objects] Error 2
[task 2021-10-06T02:29:22.475Z] 02:29:22 INFO - gmake[3]: *** Waiting for unfinished jobs....
[task 2021-10-06T02:29:22.476Z] 02:29:22 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
Updated•4 years ago
|
Flags: needinfo?(bpostelnicu)
Updated•4 years ago
|
Updated•4 years ago
|
Blocks: build-clang-trunk
| Assignee | ||
Comment 1•4 years ago
|
||
This is a very good warning.
| Assignee | ||
Comment 2•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → bpostelnicu
Status: NEW → ASSIGNED
Pushed by bpostelnicu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/dd99d0003780
fix mixing bitwise with bool operators. r=emilio
Comment 4•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox95:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
| Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(bpostelnicu)
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•