Bug 1734285  - fix mixing bitwise with bool operators. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D127639